Fix contact-left padding on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -763,6 +763,7 @@ textarea {
   .contact-left, .contact-right {
       width: 100%;
       padding: 30px;
+      margin-top: 20px;
       box-sizing: border-box;
   }
 
